feat: updated analysis to newest version of the data flow analysis