@@ -8,7 +8,14 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import org.dataflowanalysis.analysis.core.ActionSequence;
+import org.dataflowanalysis.analysis.core.AbstractTransposeFlowGraph;
+import org.dataflowanalysis.analysis.core.FlowGraphCollection;
+import org.dataflowanalysis.analysis.pcm.core.AbstractPCMVertex;
+import org.dataflowanalysis.analysis.pcm.core.PCMFlowGraphCollection;
+import org.dataflowanalysis.analysis.pcm.core.PCMTransposeFlowGraph;
+import org.dataflowanalysis.analysis.pcm.core.seff.CallingSEFFPCMVertex;
+import org.dataflowanalysis.analysis.pcm.core.seff.SEFFPCMVertex;
+import org.dataflowanalysis.analysis.pcm.core.user.CallingUserPCMVertex;
 import org.eclipse.emf.ecore.EClass;
 import org.eclipse.emf.ecore.util.EcoreUtil;
 import org.palladiosimulator.pcm.allocation.Allocation;
@@ -30,20 +37,15 @@ import org.palladiosimulator.pcm.system.System;
 import org.palladiosimulator.pcm.system.SystemPackage;
 import org.palladiosimulator.pcm.usagemodel.UsageModel;
 import org.palladiosimulator.pcm.usagemodel.UsageScenario;
-import org.dataflowanalysis.analysis.core.AbstractActionSequenceElement;
-import org.dataflowanalysis.analysis.pcm.core.AbstractPCMActionSequenceElement;
-import org.dataflowanalysis.analysis.pcm.core.seff.CallingSEFFActionSequenceElement;
-import org.dataflowanalysis.analysis.pcm.core.seff.SEFFActionSequenceElement;
-import org.dataflowanalysis.analysis.pcm.core.user.CallingUserActionSequenceElement;
 import org.dataflowanalysis.analysis.pcm.resource.PCMResourceProvider;
 import org.dataflowanalysis.analysis.pcm.utils.PCMQueryUtils;
 
 public class PropagationHelper {
 
-	private List<ActionSequence> actionSequences;
+	private PCMFlowGraphCollection actionSequences;
 	private final PCMResourceProvider resourceProvider;
 
-	public PropagationHelper(List<ActionSequence> actionSequences, PCMResourceProvider resourceProvider) {
+	public PropagationHelper(PCMFlowGraphCollection actionSequences, PCMResourceProvider resourceProvider) {
 		this.actionSequences = actionSequences;
 		this.resourceProvider = resourceProvider;
 	}
@@ -55,12 +57,12 @@ public class PropagationHelper {
 	}
 
 	public Optional<? extends Entity> findAction(String id) {
-		for (ActionSequence sequence : actionSequences) {
-			var candidates = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> EcoreUtil.getID(it.getElement()).equals(id)).toList();
+		for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
+			var candidates = sequence.getVertices().stream().map(AbstractPCMVertex.class::cast)
+					.filter(it -> EcoreUtil.getID(it.getReferencedElement()).equals(id)).toList();
 
 			if (candidates.size() > 0) {
-				return candidates.stream().map(AbstractPCMActionSequenceElement::getElement)
+				return candidates.stream().map(AbstractPCMVertex::getReferencedElement)
 						.filter(Entity.class::isInstance).map(Entity.class::cast).findFirst();
 			}
 		}
@@ -95,16 +97,16 @@ public class PropagationHelper {
 				.findFirst();
 	}
 
-	public List<SEFFActionSequenceElement<StartAction>> findStartActionsOfAssemblyContext(AssemblyContext component) {
-		List<SEFFActionSequenceElement<StartAction>> matches = new ArrayList<>();
+	public List<SEFFPCMVertex<StartAction>> findStartActionsOfAssemblyContext(AssemblyContext component) {
+		List<SEFFPCMVertex<StartAction>> matches = new ArrayList<>();
 
-		for (ActionSequence sequence : actionSequences) {
+		for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
 			@SuppressWarnings("unchecked")
-			var candidates = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> it instanceof SEFFActionSequenceElement)
-					.filter(it -> (it.getElement() instanceof StartAction))
+			var candidates = sequence.getVertices().stream().map(AbstractPCMVertex.class::cast)
+					.filter(it -> it instanceof SEFFPCMVertex<?>)
+					.filter(it -> (it.getReferencedElement() instanceof StartAction))
 					.filter(it -> it.getContext().contains(component))
-					.map(it -> (SEFFActionSequenceElement<StartAction>) it).toList();
+					.map(it -> (SEFFPCMVertex<StartAction>) it).toList();
 
 			matches.addAll(candidates);
 		}
@@ -112,12 +114,12 @@ public class PropagationHelper {
 		return matches;
 	}
 
-	public List<AbstractPCMActionSequenceElement<?>> findProccessesWithAction(Entity action) {
-		List<AbstractPCMActionSequenceElement<?>> matches = new ArrayList<>();
+	public List<AbstractPCMVertex<?>> findProccessesWithAction(Entity action) {
+		List<AbstractPCMVertex<?>> matches = new ArrayList<>();
 
-		for (ActionSequence sequence : actionSequences) {
-			var candidates = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> it.getElement().equals(action)).map(it -> (AbstractPCMActionSequenceElement<?>) it)
+		for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
+			var candidates = sequence.getVertices().stream().map(AbstractPCMVertex.class::cast)
+					.filter(it -> it.getReferencedElement().equals(action)).map(it -> (AbstractPCMVertex<?>) it)
 					.toList();
 
 			matches.addAll(candidates);
@@ -126,16 +128,16 @@ public class PropagationHelper {
 		return matches;
 	}
 
-	public List<CallingUserActionSequenceElement> findEntryLevelSystemCallsViaInterface(OperationInterface interfaze) {
-		List<CallingUserActionSequenceElement> matches = new ArrayList<>();
+	public List<CallingUserPCMVertex> findEntryLevelSystemCallsViaInterface(OperationInterface interfaze) {
+		List<CallingUserPCMVertex> matches = new ArrayList<>();
 
-		for (ActionSequence sequence : actionSequences) {
-			var entryLevelSystemCalls = sequence.getElements().stream()
-					.filter(CallingUserActionSequenceElement.class::isInstance)
-					.map(CallingUserActionSequenceElement.class::cast).toList();
+		for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
+			var entryLevelSystemCalls = sequence.getVertices().stream()
+					.filter(CallingUserPCMVertex.class::isInstance)
+					.map(CallingUserPCMVertex.class::cast).toList();
 			var entryLevelSystemCallsCandidates = entryLevelSystemCalls.stream()
 					.filter(it -> interfaze.getSignatures__OperationInterface()
-							.contains(it.getElement().getOperationSignature__EntryLevelSystemCall()))
+							.contains(it.getReferencedElement().getOperationSignature__EntryLevelSystemCall()))
 					.toList();
 			matches.addAll(entryLevelSystemCallsCandidates);
 
@@ -144,23 +146,23 @@ public class PropagationHelper {
 		return matches;
 	}
 
-	public List<CallingUserActionSequenceElement> findEntryLevelSystemCallsViaSignature(OperationSignature signature) {
+	public List<CallingUserPCMVertex> findEntryLevelSystemCallsViaSignature(OperationSignature signature) {
 		var candidates = findEntryLevelSystemCallsViaInterface(signature.getInterface__OperationSignature());
 
 		return candidates.stream()
-				.filter(it -> it.getElement().getOperationSignature__EntryLevelSystemCall().equals(signature)).toList();
+				.filter(it -> it.getReferencedElement().getOperationSignature__EntryLevelSystemCall().equals(signature)).toList();
 	}
 
-	public List<CallingSEFFActionSequenceElement> findExternalCallsViaInterface(OperationInterface interfaze) {
-		List<CallingSEFFActionSequenceElement> matches = new ArrayList<>();
+	public List<CallingSEFFPCMVertex> findExternalCallsViaInterface(OperationInterface interfaze) {
+		List<CallingSEFFPCMVertex> matches = new ArrayList<>();
 
-		for (ActionSequence sequence : actionSequences) {
-			var externalCalls = sequence.getElements().stream()
-					.filter(CallingSEFFActionSequenceElement.class::isInstance)
-					.map(CallingSEFFActionSequenceElement.class::cast).toList();
+		for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
+			var externalCalls = sequence.getVertices().stream()
+					.filter(CallingSEFFPCMVertex.class::isInstance)
+					.map(CallingSEFFPCMVertex.class::cast).toList();
 
 			var externalCallCandidates = externalCalls.stream().filter(it -> interfaze
-					.getSignatures__OperationInterface().contains(it.getElement().getCalledService_ExternalService()))
+					.getSignatures__OperationInterface().contains(it.getReferencedElement().getCalledService_ExternalService()))
 					.toList();
 			matches.addAll(externalCallCandidates);
 		}
@@ -168,26 +170,26 @@ public class PropagationHelper {
 		return matches;
 	}
 
-	public List<CallingSEFFActionSequenceElement> findExternalCallsViaSignature(OperationSignature signature) {
+	public List<CallingSEFFPCMVertex> findExternalCallsViaSignature(OperationSignature signature) {
 		var candidates = this.findExternalCallsViaInterface(signature.getInterface__OperationSignature());
 
-		return candidates.stream().filter(it -> it.getElement().getCalledService_ExternalService().equals(signature))
+		return candidates.stream().filter(it -> it.getReferencedElement().getCalledService_ExternalService().equals(signature))
 				.toList();
 	}
 
-	public List<SEFFActionSequenceElement<StartAction>> findStartActionsOfSEFFsThatImplement(
+	public List<SEFFPCMVertex<StartAction>> findStartActionsOfSEFFsThatImplement(
 			OperationInterface interfaze) {
-		List<SEFFActionSequenceElement<StartAction>> matches = new ArrayList<>();
+		List<SEFFPCMVertex<StartAction>> matches = new ArrayList<>();
 
-		for (ActionSequence sequence : actionSequences) {
+		for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
 			@SuppressWarnings("unchecked")
-			var startActions = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> it instanceof SEFFActionSequenceElement)
-					.filter(it -> (it.getElement() instanceof StartAction))
-					.map(it -> (SEFFActionSequenceElement<StartAction>) it).toList();
+			var startActions = sequence.getVertices().stream().map(AbstractPCMVertex.class::cast)
+					.filter(it -> it instanceof SEFFPCMVertex<?>)
+					.filter(it -> (it.getReferencedElement() instanceof StartAction))
+					.map(it -> (SEFFPCMVertex<StartAction>) it).toList();
 
-			for (SEFFActionSequenceElement<StartAction> action : startActions) {
-				if (action.getElement().eContainer() instanceof ResourceDemandingSEFF seff) {
+			for (SEFFPCMVertex<StartAction> action : startActions) {
+				if (action.getReferencedElement().eContainer() instanceof ResourceDemandingSEFF seff) {
 					if (interfaze.getSignatures__OperationInterface().contains(seff.getDescribedService__SEFF())) {
 						matches.add(action);
 					}
@@ -198,15 +200,15 @@ public class PropagationHelper {
 		return matches;
 	}
 
-	public List<SEFFActionSequenceElement<StartAction>> findStartActionsOfSEFFsThatImplement(
+	public List<SEFFPCMVertex<StartAction>> findStartActionsOfSEFFsThatImplement(
 			OperationSignature signature) {
 		var actionsThatImplementInterface = this
 				.findStartActionsOfSEFFsThatImplement(signature.getInterface__OperationSignature());
 
-		List<SEFFActionSequenceElement<StartAction>> matches = new ArrayList<>();
+		List<SEFFPCMVertex<StartAction>> matches = new ArrayList<>();
 
-		for (SEFFActionSequenceElement<StartAction> action : actionsThatImplementInterface) {
-			if (action.getElement().eContainer() instanceof ResourceDemandingSEFF seff) {
+		for (SEFFPCMVertex<StartAction> action : actionsThatImplementInterface) {
+			if (action.getReferencedElement().eContainer() instanceof ResourceDemandingSEFF seff) {
 				if (signature.equals(seff.getDescribedService__SEFF())) {
 					matches.add(action);
 				}
@@ -216,37 +218,42 @@ public class PropagationHelper {
 		return matches;
 	}
 
-	public List<ActionSequence> findActionSequencesWithElement(AbstractActionSequenceElement<?> element) {
-		return actionSequences.stream().filter(it -> it.getElements().contains(element)).toList();
+	public List<PCMTransposeFlowGraph> findActionSequencesWithElement(AbstractPCMVertex<?> element) {
+		return actionSequences.getTransposeFlowGraphs().stream()
+				.filter(PCMTransposeFlowGraph.class::isInstance)
+				.filter(it -> it.getVertices().contains(element))
+				.map(PCMTransposeFlowGraph.class::cast)
+				.toList();
 	}
 
 	private List<Deque<AssemblyContext>> findAllAssemblyContexts() {
 		List<Deque<AssemblyContext>> allContexts = new ArrayList<>();
 
-		for (ActionSequence sequence : actionSequences) {
-			List<Deque<AssemblyContext>> contexts = sequence.getElements().stream()
-					.map(AbstractPCMActionSequenceElement.class::cast).map(it -> it.getContext())
-					.collect(Collectors.toList());
-
-			allContexts.addAll(contexts);
+		for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
+			for (AbstractPCMVertex<?> vertex : sequence.getVertices().stream()
+					.filter(AbstractPCMVertex.class::isInstance)
+					.map(AbstractPCMVertex.class::cast)
+					.toList()) {
+				allContexts.add(vertex.getContext());
+			}
 		}
 
 		return allContexts;
 	}
 
-	public List<? extends AbstractPCMActionSequenceElement<?>> findProcessesThatRepresentResourceContainerOrUsageScenario(
+	public List<? extends AbstractPCMVertex<?>> findProcessesThatRepresentResourceContainerOrUsageScenario(
 			Entity actor) {
 
 		if (actor instanceof UsageScenario usageScenario) {
-			List<CallingUserActionSequenceElement> matches = new ArrayList<>();
+			List<CallingUserPCMVertex> matches = new ArrayList<>();
 
-			for (ActionSequence sequence : actionSequences) {
-				var callingUserActions = sequence.getElements().stream()
-						.filter(CallingUserActionSequenceElement.class::isInstance)
-						.map(CallingUserActionSequenceElement.class::cast).toList();
+			for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
+				var callingUserActions = sequence.getVertices().stream()
+						.filter(CallingUserPCMVertex.class::isInstance)
+						.map(CallingUserPCMVertex.class::cast).toList();
 
-				List<CallingUserActionSequenceElement> candidates = callingUserActions.stream()
-						.filter(it -> it.getElement().getScenarioBehaviour_AbstractUserAction()
+				List<CallingUserPCMVertex> candidates = callingUserActions.stream()
+						.filter(it -> it.getReferencedElement().getScenarioBehaviour_AbstractUserAction()
 								.getUsageScenario_SenarioBehaviour().equals(usageScenario))
 						.toList();
 
@@ -263,11 +270,11 @@ public class PropagationHelper {
 					.filter(it -> it.getResourceContainer_AllocationContext().equals(resourceContainer))
 					.map(it -> it.getAssemblyContext_AllocationContext()).toList();
 
-			List<SEFFActionSequenceElement<?>> matches = new ArrayList<>();
+			List<SEFFPCMVertex<?>> matches = new ArrayList<>();
 
-			for (ActionSequence sequence : actionSequences) {
-				var candidates = sequence.getElements().stream().filter(SEFFActionSequenceElement.class::isInstance)
-						.map(it -> (SEFFActionSequenceElement<?>) it)
+			for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
+				var candidates = sequence.getVertices().stream().filter(SEFFPCMVertex.class::isInstance)
+						.map(it -> (SEFFPCMVertex<?>) it)
 						.filter(it -> it.getContext().stream().anyMatch(contextsDeployedOnResource::contains)).toList();
 
 				matches.addAll(candidates);
@@ -287,7 +294,8 @@ public class PropagationHelper {
 		List<T> allPCMModelsOfGivenType = resourceProvider.lookupToplevelElement(eclazz).stream().filter(clazz::isInstance)
 				.map(clazz::cast).toList();
 
-		if (allPCMModelsOfGivenType.size() == 1) {
+		// TODO: Simple Data Types are also contained in a repository model. Changing this should be fine
+		if (!allPCMModelsOfGivenType.isEmpty()) {
 			return allPCMModelsOfGivenType.get(0);
 		} else {
 			throw new IllegalStateException(String.format(
@@ -318,17 +326,17 @@ public class PropagationHelper {
 	public List<StartAction> findStartActionsOfBranchAction(String id) {
 		List<StartAction> matches = new ArrayList<>();
 
-		for (ActionSequence sequence : actionSequences) {
-			var startActionElements = sequence.getElements().stream().map(AbstractPCMActionSequenceElement.class::cast)
-					.filter(it -> it instanceof SEFFActionSequenceElement)
-					.filter(it -> it.getElement() instanceof StartAction).toList();
+		for (AbstractTransposeFlowGraph sequence : actionSequences.getTransposeFlowGraphs()) {
+			var startActionElements = sequence.getVertices().stream().map(AbstractPCMVertex.class::cast)
+					.filter(it -> it instanceof SEFFPCMVertex<?>)
+					.filter(it -> it.getReferencedElement() instanceof StartAction).toList();
 
 			for (var sequenceElement : startActionElements) {
-				Optional<BranchAction> branchAction = PCMQueryUtils.findParentOfType(sequenceElement.getElement(),
+				Optional<BranchAction> branchAction = PCMQueryUtils.findParentOfType(sequenceElement.getReferencedElement(),
 						BranchAction.class, false);
 
 				if (branchAction.isPresent() && branchAction.get().getId().equals(id)) {
-					matches.add((StartAction) sequenceElement.getElement());
+					matches.add((StartAction) sequenceElement.getReferencedElement());
 				}
 			}
 		}
